# Speed

./: .config  .gitignore  Dockerfile  Makefile  README.md  Version  buildspec.yaml  buildspec.yml  feeds.conf.default  linux_conf.h  start.sh  user_conf.h
feeds-awc/luci/themes/luci-theme-awc/: Makefile
files/etc/: httpd.conf  modemstatus.json  nextivity_build_info  uhttpd_megafi.crt  uhttpd_megafi.key  wan_status
files/etc/config/: awc  awc_cloud  awc_uuid  dhcp  firewall  lcd  network  speedway_gpsd  system  uhttpd  wireless
files/etc/hotplug.d/iface/: 20-firewall  98-passthrough
files/etc/init.d/: awc-monitor  cloud-check  dnsmasq  failover  lcd  mac-monitor  speedway-gpsd  start_wifi
files/etc/ssl/certs/: ca-certificates.crt
files/etc/uci-defaults/: 33_password
files/lib/netifd/proto/: qmi.sh
files/sbin/: awc-mode-monitor.sh  awc-set-mode.sh  cloud-check.sh  dhcp-script.sh  factory-reset.sh  failover.sh  passthrough.sh  password-reset.sh  status_gather.sh  ucitojson.sh  update_mac_addr.sh  wakeup-cloud.sh  wifi  wifi.sh
include/: image-commands.mk  image.mk
keys/: bl2_private_key.pem  fip_private_key.pem  fit_key.crt  fit_key.key
package/atel/libatel/: Makefile
package/atel/libatel/src/: Makefile  encrypt_api.h  utils.h
package/atel/libnvram/: Makefile
package/atel/libnvram/src/: Makefile  libcrypto.so.1.1  nvram.h
package/atel/libusercrypto/: Makefile
package/atel/libusercrypto/src/: 2id.h  Makefile  aes.c  aes.h  debug.h  rsa.c  rsa.h  rsa_verify.c  rwsig.c  sha256.c  sha256.h  vb21_struct.h
package/atel/mgui/: Makefile
package/atel/mgui/src/: Button.c  Button.h  CMakeLists.txt  Image.c  Image.h  Object.c  Object.h  String.c  String.h  TextBox.c  TextBox.h  gpio.c  gpio.h  main.c  mgui.c  mgui.h  mgui_charger.c  mgui_charger.h  mgui_config.h  mgui_config.h.in  mgui_hawk.c  mgui_hawk.h  mgui_icons.c  mgui_icons.h  mgui_onkey.c  mgui_onkey.h  mgui_ril.c  mgui_ril.h  mgui_sms.c  mgui_sms.h  mgui_ubus.c  mgui_ubus.h  mgui_utils.c  mgui_utils.h  mgui_version.c  mgui_version.h  mgui_wifi.c  mgui_wifi.h
package/atel/mgui/src/examples/: CMakeLists.txt  hello_lcd.c  hello_touch.c  mgui_image.c
package/atel/mgui/src/lvgl/: CMakeLists.txt  asr_lvgl.c  asr_lvgl.h  lv_conf.h
package/atel/mgui/src/lvgl/lv_drivers/display/: fbdev.c  fbdev.h
package/atel/mgui/src/lvgl/lv_lib_qrcode/: lv_lib_qrcode.mk
package/atel/mgui/src/lvgl/lvgl/: lv_conf_template.h
package/atel/mgui/src/lvgl/lvgl/src/: lv_conf_internal.h
package/atel/mgui/src/lvgl/lvgl/src/lv_core/: lv_indev.c  lv_refr.c
package/atel/mgui/src/lvgl/lvgl/src/lv_draw/: lv_draw_img.c
package/atel/mgui/src/lvgl/lvgl/src/lv_hal/: lv_hal_disp.c  lv_hal_disp.h
package/atel/mgui/src/lvgl/lvgl/src/lv_misc/: lv_color.h
package/atel/mgui/src/lvgl/lvgl/src/lv_widgets/: lv_label.c
package/atel/quectel_cm/: Makefile
package/atel/quectel_cm/src/: GobiNetCM.c  MPQMUX.c  MPQMUX.h  Makefile  QMIThread.c  QMIThread.h  QmiWwanCM.c  device.c  main.c  mbim-cm.c  myserial.c  myserial.h  qmap_bridge_mode.c  quectel-qmi-proxy.c  udhcpc.c  udhcpc_netlink.c  util.c  util.h
package/base-files/: Makefile  image-config.in
package/base-files/files/etc/: banner  passwd
package/base-files/files/sbin/: config-wifi.sh  config.sh  conntrack-tools.sh  conntrack-tools_clean.sh  cwmp_run.sh  ddns.sh  miniupnpd.sh  ntp.sh  pppoe.sh  raeth_module_restart.sh  reboot.sh  release_buffer.sh  release_buffer_Upgrade_ODU.sh  release_buffer_wifi.sh  reset_default.sh  service.sh  sh_second_apn.sh  sh_third_apn.sh  sleep5_wifirestart.sh  (+11 more)
package/kernel/mtk-smc/: Makefile
package/kernel/stm-i2c-link/: Makefile
package/utils/mtk-smc-tool/: Makefile
package/utils/stm-i2c-tool/: Makefile
scripts/: mkits.sh
(+56 files in other folders)
