cmake_minimum_required(VERSION 2.6)

ADD_DEFINITIONS(-I..)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/..)

IF(BUILD_EXAMPLES)
ADD_EXECUTABLE(hello_lcd hello_lcd.c)
TARGET_LINK_LIBRARIES(hello_lcd ${LIBS})
INSTALL(TARGETS hello_lcd RUNTIME DESTINATION bin)

ADD_EXECUTABLE(hello_touch hello_touch.c)
TARGET_LINK_LIBRARIES(hello_touch ${LIBS})
INSTALL(TARGETS hello_touch RUNTIME DESTINATION bin)

ADD_EXECUTABLE(mgui_image mgui_image.c)
TARGET_LINK_LIBRARIES(mgui_image ${LIBS})
INSTALL(TARGETS mgui_image RUNTIME DESTINATION bin)

ENDIF()
